# gp-foundation

./: .gitignore  README.md  pyproject.toml
scripts/: plotting.py  test_models.py  toadstool.py  toadstool_dataset_exploration.py  train_lstm_sequential.py
src/: plotting.py  test_models.py
src/chainedgp/: datasets.py  latent_processes.py  likelihoods.py  rnn.py  utilss.py
src/chainedgp/datasets/: toadstool.py
src/chainedgp/utils/: training.py
tests/: test_datasets.py  test_likelihoods.py  test_losses.py  test_lstm.py  test_models.py  test_tensorboard.py  test_train_routine.py
